--- a/assets/styles/site.css
+++ b/assets/styles/site.css
@@ -1,3 +1,7 @@
+html {
+	font-size: 100%;
+}
+
 body {
 	font-family: "Crimson Text", "Times New Roman", serif;
 	background-color: #F2FFFC;
@@ -5,17 +9,18 @@ body {
 	line-height: 1.5;
 }
 
-h1, h2 {
+h1,
+h2 {
 	font-family: "Open Sans Condensed", "Arial", sans-serif;
 }
 
 .titulo-principal {
+	font-size: 300%;
 	text-align: center;
 	background-color: #851944;
 	color: #FFF;
-	padding: 25px;
-	border-bottom: 10px solid black;
-	font-size: 60px;
+	padding: 1.25rem;
+	border-bottom: 1rem solid #000;
 	text-transform: uppercase;
 }
 
@@ -49,8 +54,9 @@ main a {
 	font-family: "Open Sans Condensed", sans-serif;
 }
 
-.navegacao-site, .rodape-pagina {
-    padding: 10px;
+.navegacao-site,
+.rodape-pagina {
+	padding: 10px;
 }
 
 .container {
@@ -90,7 +96,7 @@ nav a {
 .icones-redes-sociais a {
 	width: 40px;
 	height: 40px;
-	display:block;
+	display: block;
 	text-indent: -99999px;
 }
 
@@ -120,12 +126,13 @@ main {
 	padding-bottom: 80px;
 }
 
-.minha-foto, .navegacao-site {
+.minha-foto,
+.navegacao-site {
 	float: right;
 	box-sizing: border-box;
 	border-left: 5px solid black;
 	border-bottom: 5px solid black;
-	
+
 }
 
 cite {
@@ -145,6 +152,6 @@ cite {
 	top: 253px;
 }
 
-ul{
+ul {
 	list-style: none;
 }
